<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tmpC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/tmpC_hint"
        android:inputType="numberSigned"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tmpC_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tmpC_View"
        app:layout_constraintBottom_toTopOf="@id/tmpC"
        app:layout_constraintEnd_toEndOf="@id/tmpC" />

    <EditText
        android:id="@+id/tmpF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/tmpF_hint"
        android:inputType="numberSigned"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tmpF_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tmpF_View"
        app:layout_constraintBottom_toTopOf="@id/tmpF"
        app:layout_constraintEnd_toEndOf="@id/tmpF" />

    <EditText
        android:id="@+id/dstKM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/dstKM_hint"
        android:inputType="number"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3666" />

    <TextView
        android:id="@+id/dstKM_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dstKM_View"
        app:layout_constraintBottom_toTopOf="@id/dstKM"
        app:layout_constraintEnd_toEndOf="@id/dstKM" />

    <EditText
        android:id="@+id/dstM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/dstM_hint"
        android:inputType="number"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3666" />

    <TextView
        android:id="@+id/dstM_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dstM_View"
        app:layout_constraintBottom_toTopOf="@id/dstM"
        app:layout_constraintEnd_toEndOf="@id/dstM" />

    <EditText
        android:id="@+id/wgtKG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/wgtKG_hint"
        android:inputType="number"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6333" />

    <TextView
        android:id="@+id/wgtKG_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wgtKG_View"
        app:layout_constraintBottom_toTopOf="@id/wgtKG"
        app:layout_constraintEnd_toEndOf="@id/wgtKG" />

    <EditText
        android:id="@+id/wgtLB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/wgtLB_hint"
        android:inputType="number"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6333" />

    <TextView
        android:id="@+id/wgtLB_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wgtLB_View"
        app:layout_constraintBottom_toTopOf="@id/wgtLB"
        app:layout_constraintEnd_toEndOf="@id/wgtLB" />

    <EditText
        android:id="@+id/volL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/volL_hint"
        android:inputType="number"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/volL_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volL_View"
        app:layout_constraintBottom_toTopOf="@id/volL"
        app:layout_constraintEnd_toEndOf="@id/volL" />

    <EditText
        android:id="@+id/volG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/volG_hint"
        android:inputType="number"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/volG_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volG_View"
        app:layout_constraintBottom_toTopOf="@id/volG"
        app:layout_constraintEnd_toEndOf="@id/volG" />
</androidx.constraintlayout.widget.ConstraintLayout>